# hash-file

./: .env  README.md  conftest.py  main.py  pyproject.toml
alembic/versions/: 2cfdac5fc0c1_create_tables_users_and_files.py
docker/: Dockerfile  docker-compose.yml
src/app/: _access_owner.py  docs_api.py  file_dir.py  routers.py
src/app/auth/: auth_service.py
src/config/: settings.py
src/db/: data_base.py  models.py
tests/: test_files.py  test_wraps.py
