[tool.poetry]
name = "hash-file"
version = "0.1.0"
description = ""
authors = ["kuravamnedura <.net>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
sentry-sdk = "1.40.0"
pydantic = "2.6.0"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
schedule = "1.2.0"
tenacity = "8.2.3"
structlog = "23.2.0"
pydantic-settings = "2.0.0"
ldap3 = "*"
flask = ">=2.0.0,<3.0.0"
uvicorn = "0.27.0"
starlette = "0.35.0"
httpx = "0.28.1"
aiohttp = "3.9.1"
flask_jwt_extended = "4.7.1"
alembic = "*"
psycopg2-binary = "*"
jinja2 = "3.1.6"
flask-restx = "1.3.0"
bcrypt = "4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "3.11.1"
requests-mock = "1.11.0"
freezegun = "1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"